[package]
name = "wgse_utils"
version = "1.0.0"
edition = "2021"
authors = ["AWP_MCN_COFT <awpmcncoft-wgse@msneko.icu>"]
license = "MIT OR Apache-2.0"
readme = true
publish = false

[lib]
name = "wgse_utils"
path = "src/lib.rs"
crate-type = ["proc-macro"]
proc-macro = true

[dependencies]
anyhow = "^1.0"
base64 = "^0.21"
convert_case = "^0.6"
if_chain = "^1.0"
proc-macro2 = "^1.0"
quote = "^1.0"
serde_json = "^1.0"
syn = { version = "^2.0", features = ["full", "parsing", "extra-traits"] }
walkdir = "^2.4"
